# maskin-projekt2

./: CMakeLists.txt  DomainModel.puml  MainActivity.puml  README.md  main.c
CMAKE/: FindSDL2.cmake  FindSDL2TTF.cmake  FindSDL2_IMAGE.cmake
src/: Linkedlists  Linkedlists.c  Linkedlists.h  controller.c  controller.h  deck.c  deck.h  gameCommands.c  gameCommands.h  main.c  socket.c  socket.h  view.c  view.h
test/: test.c
